# cufarul-backend

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
templates/: base.html.tera  composition.html.tera  index.html.tera  mode.html.tera  person.html.tera  publication.html.tera  search.html.tera  text.html.tera
